# f1tenth-racing-stack-ICRA22

./: .gitignore  README.md
config/: params.yaml  race.rviz
csv/icra/: centerline.csv  centerline_ori.csv  lane_1.csv  lane_optimal.csv  outer_bound.npy  track.npy  traj_race_cl.csv
csv/icra_1/: centerline.csv  inner_bound.npy  lane_1.csv  outer_bound.csv  outer_bound.npy  overtaking_wp_idx.npy
csv/icra_2/: inner_bound.csv  inner_bound.npy  lane_0.csv  lane_optimal.csv  outer_bound.npy  overtaking_wp_idx.npy  slowdown_wp_idx.npy  traj_race_cl.csv
csv/levine_2nd/: centerline.csv  centerline_ori.csv  inner_bound.csv  inner_bound.npy  lane_0.csv  lane_1.csv  lane_center.csv  lane_left.csv  lane_optimal.csv  outer_bound.csv  outer_bound.npy  overtaking_wp_idx.npy  slowdown_wp_idx.npy  track.csv  track.npy  (+1 more)
dummy_car/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lane_follow/: CMakeLists.txt  package.xml  setup.cfg  setup.py
maps/: levine_2nd.pgm  levine_2nd.yaml  levine_block.yaml  skir.yaml
opponent_predictor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
opponent_predictor/include/: opponent_predictor.h
opponent_predictor/launch/: opponent_predictor_launch.py
opponent_predictor/scripts/: opponent_predictor_node.py
opponent_predictor/src/: cluster.cpp  opponent_predictor.cpp  opponent_predictor_node.cpp  visualization.cpp
pure_pursuit/: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: .tmux.conf  bash_script.sh  populate.sh
trajectory_generator/: lane_generator.py  main_globaltraj.py  raceline_scripts.py  requirements.txt
(+58 files in other folders)
