<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opponent_predictor</name>
  <version>0.0.0</version>
  <description>f1tenth opponent predictor lab</description>
  <maintainer email="karpenet@seas.upenn.edu">Kedar Prasad Karpe</maintainer>
  <maintainer email="gmcmahon@seas.upenn.edu">Griffon McMahon</maintainer>
  <maintainer email="jtsun@seas.upenn.edu">Jiatong Sun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
